# infGraf2

./: .gitignore  CMakeLists.txt  HSVpicker.py  chitest.m  io_nori.py  io_nori_original.py  nohup.out  plot.py  plotImg.py  printGradientImage.py  printProbsMatrix.py  sortObj.py  toBmp.py
include/nori/: PathState.h  accel.cu  accel.h  accelOctree.h  accelOptix.h  bbox.cu  bbox.h  bitmap.h  block.h  bsdf.h  bssrdf.h  color.h  common.h  emitter.h  frame.h  integrator.h  kdtree.h  lightProbeMipMap.h  math.h  medium.h  mesh.h  object.h  pathtracing.h  phase.h  ray.cu  ray.h  sampler.h  scene.h  transform.h  vector.cu  vector.h  warp.h
scenes/: test.xml
scenes/ajax/: ajax-diffuse.xml  ajax-gold.xml  ajax-marble.xml  ajax-rough.xml  ajax.mtl
scenes/assignment-1/: serapis-marble.xml  serapis-whitted.xml
scenes/assignment-2/bunny/: bunny_ems.xml
scenes/assignment-2/cbox/: cbox_ems.xml
scenes/assignment-2/serapis/: serapis_ems.xml  serapis_env.xml  serapis_whitted.xml
scenes/assignment-2/table/: table_ems.xml
scenes/assignment-3/cbox/: cbox_conductors_ems.xml  cbox_conductors_mats.xml  cbox_substrate_ems.xml  cbox_substrate_mats.xml
scenes/assignment-3/serapis/: serapis_rough_ems.xml  serapis_rough_mats.xml  serapis_smooth_ems.xml  serapis_smooth_mats.xml
scenes/assignment-3/veach_mi/: veach_ems.xml  veach_mats.xml  veach_mis.xml
scenes/bunny/: bunny.xml
scenes/bunny/meshes/: bunny_flat.mtl
scenes/bunnyLight/: bunny.xml
scenes/cbox/: cbox-marble.xml  cbox_mis.xml
scenes/cbox/meshes/: sphere2.mtl
scenes/dragon/: dragon.xml
scenes/dragon/meshes/: StanfordDragon_low.mtl
scenes/godray/: godray.xml  godray2.xml  godray3.xml
scenes/godray/meshes/: Cube.001.mtl  Cube.003_Material.mtl  Cube.003_Material.xml  Cube.mtl  Plane.001.mtl  Plane.mtl
scenes/godray/meshes/meshes/: Cube.002.mtl  Cube.003.mtl  Cube.mtl
scenes/leda/: cam1.xml  close.xml  coat.xml  face.xml  faceClose.xml  faceCloseHair.xml  full.xml  leda.xml  ledaClose.xml  ledaSword.xml  materials.xml  sword.xml
scenes/leda/meshes/: Cube.mtl  Plane.002.mtl  Plane.003.mtl  Plane.004.mtl  Plane.005.mtl  Plane.006.mtl  Plane.mtl  boot_left.mtl  boot_right.mtl  coat_1.mtl  coat_3.mtl  coat_4.mtl  eyelasesHair.mtl  g¡j43_h.mtl  hand_right.mtl  only_head.mtl  option1_eyes.mtl  option1_hair.mtl  option1_hair_eyebrows.mtl  option1_hair_eyelashes.mtl  option1_hand_left.mtl  option1_head.001.mtl  option1_head.mtl  skirt_2.mtl  skirt_3.mtl  skirt_4.mtl  sword_lower.mtl  sword_metal.mtl  sword_upper.mtl  torso_lower.mtl  torso_upper.mtl
scenes/leda/textures/: Eyes.xcf  OilyLayer.xcf
scenes/ledaSword/: leda.xml
scenes/ledaSword/meshes/: Plane.001.mtl  Plane.005.mtl  Plane.mtl  coat_3.mtl  skirt_4.mtl  sword_gold.mtl  torso_lower.mtl
scenes/pa4/cbox/: cbox-distributed.xml  cbox-whitted.xml
scenes/pa5/ajax/: ajax-gold.xml
scenes/pa5/cbox/: cbox_mis.xml
scenes/pa5/veach_mi/: veach_mis.xml
scenes/smallAjax/: ajax.xml
scenes/smallAjax/meshes/: IndexedFaceSete.mtl  Plane.001.mtl
scenes/tests/: bvh.xml  dipoleProfile.xml  sssProfile.xml  subsurface.xml
scenes/tests/meshes/: Cube.mtl
scenes/yen/: yen.xml
scenes/yen/meshes/: F_MED_FishBowl_FaceAcc_LOD0.mo.mtl  F_MED_FishBowl_Head_LOD0.mo.001.mtl  F_MED_FishBowl_Head_LOD0.mo.mtl  F_MED_FishBowl_LOD0.mo.mtl
scenes/yenBath/: SketchFab_Yennefer.xml
scenes/yenBath/meshes/: Bathhtub.001.mtl  Bilder.001.mtl  Blanket.001.mtl  BubbleMesh.003.mtl  Dive.mtl  Feuertopf.001.mtl  Furniture.h.001.mtl  Furniture.v.001.mtl  Holz.001.mtl  Horse.001.mtl  Krams.001.mtl  Seife.Yenn.001.mtl  Sprite_8x8.002.mtl  Steine.001.mtl  Teppich_Alpha.001.mtl  Yennefer.001.mtl  Yennefer.Augenbrauen.mtl  Yennefer.Haare.mtl  candel.001.mtl
scripts/: batch_render.sh  combineEXR.py  metricsExr.py  perf_config.sh  toPng.py  tone_mapper.sh  tonemap_leda.sh  visulize_exr.py
src/: AOintegrator.cpp  GGX.cpp  accel.cpp  accel.cu  accelBVH.cpp  accelImpl.cu  accelOctree.cpp  accelOg.cpp  accelUnoptim.cpp  agregate.cpp  area.cpp  beckmann.cpp  bitmap.cpp  block.cpp  common.cpp  depthIntegrator.cpp  dielectric.cpp  diffuse.cpp  dipole.cpp  directWhitted.cpp  direct_mats.cpp  direct_mis.cpp  environment.cpp  godray.cpp  independent.cpp  indirectWhitted.cpp  ledaIntegrator.cpp  lightProbeMipMap.cpp  main.cpp  math.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  normalizedDiffusion.cpp  normals.cpp  obj.cpp  orenNayar.cpp  path_ems.cpp  path_ems_volume.cpp  path_mats.cpp  (+20 more)
